syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string message = 1;
}

message GreetingManyTimesRequest {
    Greeting greeting = 1;
}

message GreetingManyTimesResponse {
    string message = 1;
}


service Greeter {
    // Unary
    rpc Greet (GreetingRequest) returns (GreetingResponse);

    // Server Streaming
    rpc GreetManyTimes (GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse);
}


